// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`does not apply priority class for unsupported value 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders a11yText when bodyState === loading 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33maria-label[39m=[32m"loading text"[39m
    [33mclass[39m=[32m"btn btn--primary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"btn__cell"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"progress-spinner"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--24"[39m
          [33mdata-marko-key[39m=[32m"@svg s0-2-3-0"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs[39m
            [33mdata-marko-key[39m=[32m"@defs s0-2-3-0"[39m
          [36m>[39m
            [36m<symbol[39m
              [33mfill[39m=[32m"none"[39m
              [33mid[39m=[32m"icon-spinner-24"[39m
              [33mviewBox[39m=[32m"0 0 24 24"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M22.5 12A10.5 10.5 0 1 1 9.514 1.798"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-background, #3665F3)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
              [36m<path[39m
                [33md[39m=[32m"M14.606 1.829a10.5 10.5 0 0 1 4.056 2.055 10.499 10.499 0 0 1 2.806 3.577"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-foreground, #E5E5E5)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-spinner-24"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with fluid=false 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with fluid=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--fluid btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with priority=delete 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--delete"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with priority=primary 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--primary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with priority=secondary 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with size=large 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--large btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders defaults 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders disabled version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mdisabled[39m=[32m""[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders expanded button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--form"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0-0 false\\",\\"onkeydown\\":\\"handleKeydown s0-0 false\\",\\"onfocus\\":\\"handleFocus s0-0 false\\",\\"onblur\\":\\"handleBlur s0-0 false\\"}"[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"btn__cell"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__text"[39m
      [36m>[39m
        [0mButton[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mdata-marko-key[39m=[32m"@svg s0-0-6-0"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs[39m
          [33mdata-marko-key[39m=[32m"@defs s0-0-6-0"[39m
        [36m>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</span>[39m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders fake version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<a[39m
    [33maria-label[39m=[32m"fake button"[39m
    [33mclass[39m=[32m"fake-btn fake-btn--large fake-btn--primary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m"#"[39m
  [36m>[39m
    [0mButton[0m
  [36m</a>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders fixed-height button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--fixed-height btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders large fixed-height button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--large-fixed-height btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders large truncated button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--large-truncated btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders partially disabled version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33maria-disabled[39m=[32m"true"[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders small button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--small btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders truncated button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--truncated btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders with id override 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mid[39m=[32m"test"[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders with type override 1`] = `
"[36m<DocumentFragment>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0 false\\",\\"onkeydown\\":\\"handleKeydown s0 false\\",\\"onfocus\\":\\"handleFocus s0 false\\",\\"onblur\\":\\"handleBlur s0 false\\"}"[39m
    [33mhref[39m=[32m""[39m
    [33mtype[39m=[32m"submit"[39m
  [36m>[39m
    [0mButton[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;
